@@ -3,6 +3,10 @@
   * Provide as much information as possible in the default error handler for
     errors that do not have a proper stack trace.
 
+  * Extracted base error class into its own package.
+
+  * Removed view module.
+
 = 0.6.1 / 2011-10-08
 
   * Removed Error#fullStack and fixed a bug with printing stack traces for
